force-app/main/default/objects/ortto__Ortto_Activity__mdt/ortto__Ortto_Activity__mdt.object-meta.xml
<CustomObject>
    <label>Ortto Activity</label>
    <pluralLabel>Ortto Activities</pluralLabel>
</CustomObject>