force-app/main/default/objects/ortto__Ortto_Activity__mdt/fields/ortto__Activity__c.field-meta.xml
<CustomField>
    <fullName>ortto__Activity__c</fullName>
    <description>Ortto activity object</description>
    <label>Activity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Ortto_Activities</relationshipLabel>
    <relationshipName>Ortto_Activities</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>