force-app/main/default/objects/ortto__Ortto_Activity__mdt/fields/ortto__Activity_Related_Field__c.field-meta.xml
<CustomField>
    <fullName>ortto__Activity_Related_Field__c</fullName>
    <description>Field associated with ortto activity</description>
    <label>Activity Related Field</label>
    <metadataRelationshipControllingField>ortto__Ortto_Activity__mdt.ortto__Activity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Ortto_Activities</relationshipLabel>
    <relationshipName>Ortto_Activities</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>