force-app/main/default/objects/ortto__Ortto_Activity__mdt/fields/ortto__Object__c.field-meta.xml
<CustomField>
    <fullName>ortto__Object__c</fullName>
    <description>Salesforce object</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Salesforce_Objects</relationshipLabel>
    <relationshipName>Salesforce_Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>