force-app/main/default/objects/ortto__Ortto_Activity__mdt/fields/ortto__Object_Related_Field__c.field-meta.xml
<CustomField>
    <fullName>ortto__Object_Related_Field__c</fullName>
    <description>Field associated with object</description>
    <label>Object Related Field</label>
    <metadataRelationshipControllingField>ortto__Ortto_Activity__mdt.ortto__Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Salesforce_Objects</relationshipLabel>
    <relationshipName>Salesforce_Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>