force-app/main/default/objects/ortto__Ortto_Activity__mdt/listViews/ortto__All_Ortto_Activities.listView-meta.xml
<ListView>
    <fullName>ortto__All_Ortto_Activities</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ortto__Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Ortto Activities</label>
</ListView>